src/snapshots/zeek_language_server__ast__test__loop_vars_table-7.snap
---
source: src/ast.rs
expression: typ
---
Decl {
    module: Global,
    id: u!("double"),
    fqid: u!("double"),
    kind: Builtin(
        Double,
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'double'"),
}
