src/snapshots/zeek_language_server__ast__test__loop_vars_vector.snap
---
source: src/ast.rs
expression: typ
---
Decl {
    module: Global,
    id: u!("count"),
    fqid: u!("count"),
    kind: Builtin(
        Count,
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'count'"),
}
