src/snapshots/zeek_language_server__ast__test__redef_enum-2.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, type_)).unwrap()"
---
Decl {
    module: String(
        u!("foo"),
    ),
    id: u!("eC"),
    fqid: u!("foo::eC"),
    kind: EnumMember,
    is_export: Some(
        false,
    ),
    loc: Some(
        Location {
            range: Range {
                start: Position {
                    line: 11,
                    character: 4,
                },
                end: Position {
                    line: 11,
                    character: 6,
                },
            },
            selection_range: Range {
                start: Position {
                    line: 11,
                    character: 4,
                },
                end: Position {
                    line: 11,
                    character: 6,
                },
            },
            uri: InternedUri(Id(_)),
        },
    ),
    documentation: u!("```zeek\n# In foo::E\neC\n```"),
}
