src/snapshots/zeek_language_server__ast__test__redef_enum.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, type_)).unwrap()"
---
Decl {
    module: None,
    id: u!("eB"),
    fqid: u!("eB"),
    kind: EnumMember,
    is_export: Some(
        false,
    ),
    loc: Some(
        Location {
            range: Range {
                start: Position {
                    line: 4,
                    character: 4,
                },
                end: Position {
                    line: 4,
                    character: 6,
                },
            },
            selection_range: Range {
                start: Position {
                    line: 4,
                    character: 4,
                },
                end: Position {
                    line: 4,
                    character: 6,
                },
            },
            uri: InternedUri(Id(_)),
        },
    ),
    documentation: u!("```zeek\n# In E\neB\n```"),
}
