src/snapshots/zeek_language_server__ast__test__redef_global_record.snap
---
source: src/ast.rs
expression: c_type
---
Decl {
    module: Global,
    id: u!("connection"),
    fqid: u!("connection"),
    kind: Type(
        [
            Decl {
                module: None,
                id: u!("id"),
                fqid: u!("connection::id"),
                kind: Field(
                    [],
                ),
                is_export: None,
                loc: Some(
                    Location {
                        range: Range {
                            start: Position {
                                line: 1,
                                character: 26,
                            },
                            end: Position {
                                line: 1,
                                character: 28,
                            },
                        },
                        selection_range: Range {
                            start: Position {
                                line: 1,
                                character: 26,
                            },
                            end: Position {
                                line: 1,
                                character: 28,
                            },
                        },
                        uri: InternedUri(Id(_)),
                    },
                ),
                documentation: u!("```zeek\n# In connection\nid: string;\n```"),
            },
            Decl {
                module: None,
                id: u!("name"),
                fqid: u!("x::connection::name"),
                kind: Field(
                    [],
                ),
                is_export: None,
                loc: Some(
                    Location {
                        range: Range {
                            start: Position {
                                line: 2,
                                character: 29,
                            },
                            end: Position {
                                line: 2,
                                character: 33,
                            },
                        },
                        selection_range: Range {
                            start: Position {
                                line: 2,
                                character: 29,
                            },
                            end: Position {
                                line: 2,
                                character: 33,
                            },
                        },
                        uri: InternedUri(Id(_)),
                    },
                ),
                documentation: u!("```zeek\n# In x::connection\nname: string;\n```"),
            },
        ],
    ),
    is_export: Some(
        false,
    ),
    loc: Some(
        Location {
            range: Range {
                start: Position {
                    line: 1,
                    character: 0,
                },
                end: Position {
                    line: 1,
                    character: 40,
                },
            },
            selection_range: Range {
                start: Position {
                    line: 1,
                    character: 5,
                },
                end: Position {
                    line: 1,
                    character: 15,
                },
            },
            uri: InternedUri(Id(_)),
        },
    ),
    documentation: u!("```zeek\ntype connection: record { id: string; };\n```"),
}
