src/snapshots/zeek_language_server__ast__test__redef_record_same_file-3.snap
---
source: src/ast.rs
expression: "crate::ast::typ(&db.0,\ncrate::ast::resolve(&db.0, NodeLocation::from_node(uri, a)).unwrap())"
---
Some(
    Decl {
        module: String(
            u!("x"),
        ),
        id: u!("A"),
        fqid: u!("x::A"),
        kind: Type(
            [
                Decl {
                    module: None,
                    id: u!("c"),
                    fqid: u!("x::A::c"),
                    kind: Field(
                        [
                            u!("&optional"),
                        ],
                    ),
                    is_export: None,
                    loc: Some(
                        Location {
                            range: Range {
                                start: Position {
                                    line: 3,
                                    character: 20,
                                },
                                end: Position {
                                    line: 3,
                                    character: 21,
                                },
                            },
                            selection_range: Range {
                                start: Position {
                                    line: 3,
                                    character: 20,
                                },
                                end: Position {
                                    line: 3,
                                    character: 21,
                                },
                            },
                            uri: InternedUri(Id(_)),
                        },
                    ),
                    documentation: u!("```zeek\n# In x::A\nc: count &optional;\n```"),
                },
            ],
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 1,
                        character: 0,
                    },
                    end: Position {
                        line: 1,
                        character: 18,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 1,
                        character: 5,
                    },
                    end: Position {
                        line: 1,
                        character: 6,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\ntype A: record {};\n```"),
    },
)
