src/snapshots/zeek_language_server__ast__test__redef_record_same_file-4.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, a_c))"
---
Some(
    Decl {
        module: None,
        id: u!("c"),
        fqid: u!("x::A::c"),
        kind: Field(
            [
                u!("&optional"),
            ],
        ),
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 3,
                        character: 20,
                    },
                    end: Position {
                        line: 3,
                        character: 21,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 3,
                        character: 20,
                    },
                    end: Position {
                        line: 3,
                        character: 21,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\n# In x::A\nc: count &optional;\n```"),
    },
)
