src/snapshots/zeek_language_server__ast__test__redef_record_same_file.snap
---
source: src/ast.rs
expression: "crate::ast::typ(&db.0,\ncrate::ast::resolve(&db.0, NodeLocation::from_node(uri, g)).unwrap())"
---
Some(
    Decl {
        module: String(
            u!("x"),
        ),
        id: u!("A"),
        fqid: u!("x::A"),
        kind: Type(
            [],
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 1,
                        character: 0,
                    },
                    end: Position {
                        line: 1,
                        character: 18,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 1,
                        character: 5,
                    },
                    end: Position {
                        line: 1,
                        character: 6,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\ntype A: record {};\n```"),
    },
)
