src/snapshots/zeek_language_server__ast__test__resolve-2.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, node))"
---
Some(
    Decl {
        module: None,
        id: u!("f1"),
        fqid: u!("x::X::f1"),
        kind: Field(
            [
                u!("&optional"),
            ],
        ),
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 3,
                        character: 4,
                    },
                    end: Position {
                        line: 3,
                        character: 6,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 3,
                        character: 4,
                    },
                    end: Position {
                        line: 3,
                        character: 6,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\n# In x::X\nf1: count &optional;\n```"),
    },
)
