src/snapshots/zeek_language_server__ast__test__resolve-3.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0, NodeLocation::from_node(uri, node))"
---
Some(
    Decl {
        module: None,
        id: u!("y"),
        fqid: u!("y"),
        kind: Variable,
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 17,
                        character: 19,
                    },
                    end: Position {
                        line: 17,
                        character: 20,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 17,
                        character: 19,
                    },
                    end: Position {
                        line: 17,
                        character: 27,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\ny: count\n```"),
    },
)
